get datasets via git added, indexer and api updated
