# api/urls.py
@@ -1,13 +1,23 @@
 from django.urls import include, path
 from django.urls import include, path, re_path
 
+from django.conf import settings
+
 from . import views
 
-_libs = ["rfc", "id", "std", "bcp", "fyi", "nist"]
-re_libs = f'(?P<lib>{"|".join(_libs)})'
+
+_indexable_datasets = []
+for _dataset_name in settings.RELATON_DATASETS:
+    _indexable_datasets.append(_dataset_name)
+
+re_datasets = f'(?P<dataset_name>{"|".join(_indexable_datasets)})'
 
 urlpatterns = [
     path('v1/', views.index, name='api_index'),
-    path(f'v1/task/<str:task_id>', views.check_task, name='api_check_task'),
-    re_path(f'^v1/indexer/{re_libs}/run', views.run_indexer, name='api_run_indexer'),
+    path('v1/indexers', views.api_list_indexers, name='api_list_indexers'),
+    re_path(f'^v1/indexer/{re_datasets}/run', views.api_run_indexer, name='api_run_indexer'),
+    re_path(f'^v1/indexer/{re_datasets}/stop', views.api_stop_indexer, name='api_stop_indexer'),
+    re_path(f'^v1/indexer/{re_datasets}/reset', views.api_reset_indexer, name='api_reset_indexer'),
+    re_path(f'^v1/indexer/{re_datasets}/status', views.api_indexer_status, name='api_indexer_status'),
 ]
+
